<resources>
    <string name="app_name">quiz_game_v2</string>
    <string name="home_page_title">Quiz Game V2</string>
    <string name="start_game_button_text">Start Game</string>
    <string name="play_game_button_text">Play Quiz Game V2</string>
    <string name="prompt_login_button_text">Existing User? Log In</string>
    <string name="register_button_text">Register</string>
    <string name="register_title">Please complete all fields below:</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Create Username</string>
    <string name="password_hint">Create Password</string>
    <string name="create_account_submission">Complete Registration</string>
    <string name="dialog_title">Sign In</string>
    <string name="username_dialog_hint">Username</string>
    <string name="password_dialog_hint">Password</string>
    <string name="confirm">Log In</string>
    <string name="welcomeText">Welcome </string>
    <string name="howToStartGame">Click "Start Game" Button to Begin Quiz!</string>
    <string name="QuizInstructionsTitleText">How to Play</string>
    <string name="QuizInstructionsFirstText">- You will be faced with 5 difficult questions</string>
    <string name="QuizInstructionsSecondText">- Each question will be worth 20 points</string>
    <string name="QuizInstructionsThirdText">- Some questions will have multiple answers</string>
    <string name="QuizInstructionsFourthText">- Click the "Confirm" Button to confirm your answer</string>
    <string name="QuizInstructionsFifthText">- Click the "Next Question" Button to proceed to next question</string>
    <string name="startquestion1ButtonText">Begin Quiz</string>
    <string name="quizInstructionsTextSize">25sp</string>
    <string name="question1text">What country is Timbuktu located in?</string>
    <string name="correct_answer_question1">Mali</string>
    <string name="question1_answer2">Cambodia</string>
    <string name="question1_answer3">Thailand</string>
    <string name="question1_answer4">China</string>
    <string name="ConfirmAnswerButtonText">Confirm Answer</string>
    <string name="moveToNextQuestionText">Next Question</string>
    <string name="question2text">What temperature does water boil at (in fahrenheit)?</string>
    <string name="question2_answer1Text">300 degrees</string>
    <string name="question2CorrectAnswerText">212 degrees</string>
    <string name="question2_answer3">450 degrees</string>
    <string name="question2_answer4">280 degrees</string>
    <string name="question3Text">Which of the following cities are in Italy?</string>
    <string name="rome">Rome</string>
    <string name="florence">Florence</string>
    <string name="berlin">Berlin</string>
    <string name="milan">Milan</string>
    <string name="question4text">How many New York hockey teams exist in the NHL?</string>
    <string name="question4_answer1Text">2</string>
    <string name="question4answer2Text">1</string>
    <string name="question4correctAnswerText">3</string>
    <string name="question4_answer4">0</string>
    <string name="question5text">What planet is closest to the sun?</string>
    <string name="question5_answer1Text">Earth</string>
    <string name="question5answer2Text">Venus</string>
    <string name="question5correctAnswerText">Mercury</string>
    <string name="question5_answer4">Mars</string>
    <string name="moveToResultsText">See Results</string>
    <string name="playAgainButtonText">Play Again</string>
</resources>