<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_account_titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/first_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:textSize="16sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/last_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:textSize="16sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/dob_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob_hint"
        android:textSize="16sp"
        android:inputType="date"/>
    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textSize="16sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/username_field_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textSize="16sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/password_field_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textSize="16sp"
        android:inputType="text"/>

    <Button
        android:id="@+id/complete_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:text="@string/create_account_submission"
        android:layout_gravity="end"
        android:onClick="saveData"/>




</LinearLayout>