<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizInstructionsActivity">

    <TextView
        android:id="@+id/Quiz_Instructions_Title_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsTitleText"
        android:textSize="60sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/Quiz_Instructions_First_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsFirstText"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/Quiz_Instructions_Second_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsSecondText"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/Quiz_Instructions_Third_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsThirdText"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/Quiz_Instructions_Fourth_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsFourthText"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/Quiz_Instructions_Fifth_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuizInstructionsFifthText"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/StartFirstQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startquestion1ButtonText"
        android:layout_gravity="center"
        android:onClick="beginQuiz"/>



</LinearLayout>