<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Question5Activity">

    <TextView
        android:id="@+id/Question5TextView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/question5text"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical"
        android:layout_weight="3"
        >
        <RadioButton
            android:id="@+id/question5_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5_answer1Text"
            android:onClick="saveAnswer"
            />
        <RadioButton
            android:id="@+id/question5_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5answer2Text"
            android:onClick="saveAnswer"

            />
        <RadioButton
            android:id="@+id/question5_correctAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5correctAnswerText"
            android:onClick="saveAnswer"

            />
        <RadioButton
            android:id="@+id/question5_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5_answer4"
            android:onClick="saveAnswer"
            />

    </RadioGroup>

    <Button
        android:id="@+id/ConfirmQuestion5AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/ConfirmAnswerButtonText"
        android:layout_gravity="center"
        android:onClick="checkAnswer"
        android:visibility="visible"/>
    <Button
        android:id="@+id/moveToNextQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/moveToResultsText"
        android:layout_gravity="center"
        android:onClick="seeResults"
        android:visibility="gone"/>




</LinearLayout>