<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".Question4Activity">

    <TextView
        android:id="@+id/Question4TextView"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/question4text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/question4_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer1Text"
            android:textColor="@color/white"
            android:onClick="saveAnswer"
            />
        <RadioButton
            android:id="@+id/question4_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4answer2Text"
            android:textColor="@color/white"
            android:onClick="saveAnswer"

            />
        <RadioButton
            android:id="@+id/question4_correctAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4correctAnswerText"
            android:textColor="@color/white"
            android:onClick="saveAnswer"

            />
        <RadioButton
            android:id="@+id/question4_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4_answer4"
            android:textColor="@color/white"
            android:onClick="saveAnswer"
            />

    </RadioGroup>

    <Button
        android:id="@+id/ConfirmQuestion4AnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/ConfirmAnswerButtonText"
        android:backgroundTint="@color/button_color"
        android:layout_gravity="center"
        android:onClick="checkAnswer"
        android:visibility="visible"/>
    <Button
        android:id="@+id/moveToNextQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:text="@string/moveToNextQuestionText"
        android:backgroundTint="@color/button_color"
        android:layout_gravity="center"
        android:onClick="nextQuestion"
        android:visibility="gone"/>




</LinearLayout>