<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="50sp">


    <TextView
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/username_field"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:hint="@string/username_dialog_hint"
        android:inputType="text"/>
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_dialog_hint"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/submit_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/button_color"
            android:onClick="checkCredentials"
            android:text="@string/confirm"/>
    </RelativeLayout>







</LinearLayout>